# LayoutBot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  json_parsing.py  main.py  pyproject.toml  train_set_clarify.json  val_set_clarify.json
data/: train_set_clarify.json  val_set_clarify.json
scripts/: json_parsing.py
src/: db.py  filters.py  keyboards.py  messages.py
src/roles/: __init__.py  owner.py  user.py
src/utils/: __init__.py  is_owner.py  logger.py
